Crash when cavity automasking in enabled in sculpt/paint mode #101718

Closed
opened 2022-10-10 08:31:36 +02:00 by Pascal · 11 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.48

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-10 00:22, hash: a24f11e0ec
Hard to tell, because entering sculptmode was crashing at that time, but probably broken since its introduction in 0156a677c7

Short description of error
All is in the title, Blender closes immediately after activating cavity automasking when painting in sculpt mode (using a map not an attribute colour).

Exact steps for others to reproduce the error

  • enable Preferences > Experimental > Prototypes > Sculpt Texture Paint
  • enter sculptmode on the default cube
  • choose the Paint brush
  • Canvas > Add a texture to the Materials Base Color
  • enable Options > Automasking > Cavity
  • do a stroke
  • crash

blender_system_info.txt
blender_debug_output.txt

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.48 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-10 00:22, hash: `a24f11e0ec` Hard to tell, because entering sculptmode was crashing at that time, but probably broken since its introduction in 0156a677c7 **Short description of error** All is in the title, Blender closes immediately after activating cavity automasking when painting in sculpt mode (using a map not an attribute colour). **Exact steps for others to reproduce the error** - enable `Preferences` > `Experimental` > `Prototypes` > `Sculpt Texture Paint` - enter sculptmode on the default cube - choose the `Paint` brush - Canvas > Add a texture to the Materials Base Color - enable `Options` > `Automasking` > `Cavity` - do a stroke - crash [blender_system_info.txt](https://archive.blender.org/developer/F13646816/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F13646817/blender_debug_output.txt)
Author

Added subscriber: @PMA33

Added subscriber: @PMA33
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Perhaps both reports are same: #101595 (Regression: Crash when using "Mask From Cavity")

Perhaps both reports are same: #101595 (Regression: Crash when using "Mask From Cavity")
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Not caused by the same commit as #101595, will check

Not caused by the same commit as #101595, will check
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Hard to tell, because entering sculptmode was crashing at that time, but probably broken since its introduction in 0156a677c7

CC @JosephEagar

Hard to tell, because entering sculptmode was crashing at that time, but probably broken since its introduction in 0156a677c7 CC @JosephEagar

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

This issue was referenced by 188786f0b0

This issue was referenced by 188786f0b0ddcbeffe6f2e7d9a5f053cf67faf05
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-10-11 18:59:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101718
No description provided.